with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.18.1
====================
[2856410] "Run Command" menu shortcut no longer greyed out for Shortcuts
to base entries with a Run Command.
[2851848] Mouse double-click interval removed from Virtual Keyboard
to allow multiple virtual keys to be entered quickly.
[2850907] Password field no longer cleared after focus change.
[2842700] No longer crashes when using a French keyboard.
[2192490, 2840534] Multiple desktops now handled correctly for Windows
XP and later system. When run on prior releases of Windows, the previous
method using a timer will still be used.
[2836569] Correct password data now copied from Edit dialog using 'Smart
Labels'
[2832991] Double-click action display in the Status Bar now reflects the
value for entries that have overriden the current default and is also
updated after the entry is edited.
[2820260] Fix password expiry interval processing during Edit.
[2818653] Password expiry interval now exported to XML correctly in decimal
and show current expiry interval during Edit, if present.
[2813295] 'Browse + Autotype' system tray menu items fixed - thanks to
Vasily for reporting and sending the patches for this.
[2085058] Old (1.x) format databases now closed correctly.
[] Fixed problem with viewing a shortcut in read-only mode - thanks to
gillum for reporting and helping track this down.
[] Fix crash error using External Editor on Notes field.
[] Password Verification field not set when editing/viewing an alias entry
and the password is hidden.
[] Enter key again works in initial dialog if user uses browse button to
select a database to open.
[] AutoType by an alias now has correct password and its own notes data